# ni-fpga-rs

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml  rust.yml  test.yml
example/: Cargo.toml  build.sh
example-arc/: Cargo.toml
example-arc/src/: main.rs  registers.rs
example/src/: main.rs
integration/: Cargo.toml  README.md
integration/src/: NiFpga.c  NiFpga.h  NiFpga_Test.c  NiFpga_Test.h  main.rs  registers.rs
ni-fpga/: Cargo.toml
ni-fpga-derive/: Cargo.toml
ni-fpga-derive/src/: lib.rs
ni-fpga-macros/: Cargo.toml
ni-fpga-macros/src/: lib.rs
ni-fpga-sys/: Cargo.toml  build.rs
ni-fpga-sys/src/: dlopenerror.rs  enums.rs  ffi.rs  lib.rs
ni-fpga/src/: datatype.rs  erased_register.rs  errors.rs  fixed_register.rs  fxp.rs  hmb.rs  interrupt_manager.rs  lib.rs  nifpga.rs  register.rs  session.rs  session_lifetimes.rs  status.rs
ni-fpga/src/fxp/: unsigned.rs
ni_fpga/: Cargo.toml
ni_fpga/src/: datatype.rs  ffi.rs  lib.rs  session.rs  status.rs
ni_fpga_derive/: Cargo.toml
ni_fpga_derive/src/: lib.rs
ni_fpga_macros/: Cargo.toml
