[package]
name = "example-arc"
version = "0.1.0"
authors = ["Thad House <thadhouse1>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ni-fpga = { path = "../ni-fpga" }
ni-fpga-macros = { path = "../ni-fpga-macros" }
