[package]
name = "example"
version = "0.1.0"
authors = ["Connor Worley <connorbworley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ni_fpga = { path = "../ni_fpga" }
ni_fpga_macros = { path = "../ni_fpga_macros" }
