[package]
name = "example"
version = "0.1.0"
authors = ["Connor Worley <connorbworley@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ni-fpga = { path = "../ni-fpga", features=["use_generic_const_exprs"] }
ni-fpga-macros = { path = "../ni-fpga-macros" }
