[package]
name = "integration"
version = "0.1.0"
authors = ["Connor Worley <connorbworley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
ni-fpga = { path = "../ni-fpga" }
ni-fpga-macros = { path = "../ni-fpga-macros" }
tempfile = "3.1.0"