[package]
name = "ni-fpga-macros"
version = "0.1.0"
authors = ["Connor Worley <connorbworley@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Macros to be used with the ni-fpga crate."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.6"
syn = { version = "1.0.23", features = ["full"] }
