[package]
name = "ni-fpga-macros"
version = "1.0.0"
authors = ["Connor Worley <connorbworley@gmail.com>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE.md"
description = "Macros to be used with the ni-fpga crate."
repository = "https://github.com/first-rust-competition/ni-fpga-rs"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.6"
syn = { version = "1.0.23", features = ["full"] }
