[package]
name = "ni-fpga-sys"
version = "1.0.1"
authors = ["Connor Worley <connorbworley@gmail.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Rust bindings to the NI FPGA C API."
repository = "https://github.com/first-rust-competition/ni-fpga-rs"

build = "build.rs"

[dependencies]
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
libc = "0.2"
