[package]
name = "ni-fpga"
version = "1.4.1"
authors = ["Connor Worley <connorbworley@gmail.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Safe Rust interface to NI FPGAs."
readme = "README.md"
repository = "https://github.com/first-rust-competition/ni-fpga-rs"

[dependencies]
bitvec = "0.17.4"
ni-fpga-sys = { version = "1.0.1", path = "../ni-fpga-sys" }
thiserror = "1.0.19"
