[package]
name = "ni-fpga"
version = "1.5.0"
authors = ["Connor Worley <connorbworley@gmail.com>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE.md"
description = "Safe Rust interface to NI FPGAs with FXP support."
readme = "README.md"
repository = "https://github.com/first-rust-competition/ni-fpga-rs"

[dependencies]
bitvec = "1.0.1"
ni-fpga-sys = { version = "1.0.1", path = "../ni-fpga-sys" }
thiserror = "1.0.35"
